--- a/index.html
+++ b/index.html
@@ -506,28 +506,10 @@ Introducing Digital Marketing service designed to breathe new life into your bra
       ShareTalk works seamlessly: users schedule a session with a professional, 
       connect, and receive the guidance they need for a healthier, happier life
     </p>
-    <a href="#"><i class='bx bx-link-external'></i></a>
+    <a href="default.html"><i class='bx bx-link-external'></i></a>
   </div>
 </div>
 
-<!-- <div class="port-box mix product">
-  <div class="port-video">
-    <video width="320" height="240" controls loop>
-      <source src="vid/sharetalk.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  <div class="port-content">
-    <h3>ShareTalk</h3>
-    <p>
-      Developed with a dedicated team, ShareTalk is the result of our collective effort to create a 
-      supportive community for personal growth and well-being.
-      ShareTalk works seamlessly: users schedule a session with a professional, 
-      connect, and receive the guidance they need for a healthier, happier life.
-    </p>
-    <a href="#"><i class='bx bx-link-external'></i></a>
-  </div>
-</div> -->
 
 
 
@@ -542,7 +524,7 @@ Introducing Digital Marketing service designed to breathe new life into your bra
       <p>
         The "Interview Application" project was a software development endeavor in which I played a pivotal role as a software developer. The primary objective of this project was to design and develop an application that streamlined the interview process for both candidates and interviewers. It aimed to enhance the efficiency, transparency, and overall experience of conducting interviews, 
         whether for job positions, educational admissions, or any other evaluative purposes. </p>
-      <a href="#"><i class='bx bx-link-external'></i></a>
+      <a href="default.html"><i class='bx bx-link-external'></i></a>
     </div>
   </div>
 
@@ -555,7 +537,7 @@ Introducing Digital Marketing service designed to breathe new life into your bra
       <p>
         The "Moderator System" project was a software development initiative in which I played a significant role as a software developer. This project aimed to create a SharePoint-based application designed to enhance content moderation and management within the SharePoint environment. The primary goal was to provide organizations with an efficient and user-friendly system for overseeing, 
         curating, and ensuring the quality of content shared on their SharePoint platform. </p>
-      <a href="#"><i class='bx bx-link-external'></i></a>
+      <a href="default.html"><i class='bx bx-link-external'></i></a>
     </div>
   </div>
 
@@ -569,7 +551,7 @@ Introducing Digital Marketing service designed to breathe new life into your bra
         The "Co-Op" project was a significant software development initiative in which I played a key role as a 
         software developer. The primary objective of this project was to create an online platform designed to 
         streamline and simplify the process for students of Mangosuthu University of Technology (MUT) to apply for in-service training or internships. The platform was developed to serve as a bridge between students seeking valuable work experience and organizations offering internship opportunities. </p>
-      <a href="#"><i class='bx bx-link-external'></i></a>
+      <a href="default.html"><i class='bx bx-link-external'></i></a>
     </div>
   </div>
   
