--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Introducing Digital Marketing service designed to breathe new life into your bra
 
             To enhance user experience and ensure seamless access to data, I integrated local storage functionality.
           </p>
-          <a href="#"><i class='bx bx-link-external'></i></a>
+          <a href="https://github.com/GeneralWand/Expense-Tracker.git"><i class='bx bx-link-external'></i></a>
         </div>
       </div>
 
